Add missing period

--- a/packages/documentation/src/pages/visual-design/index.mdx
+++ b/packages/documentation/src/pages/visual-design/index.mdx
@@ -22,4 +22,4 @@ You can view documentation for each of the components in `formation-react` by cl
 
 ### Storybook
 
-The Design System team is working on moving the component documentation to [Storybook](https://design.va.gov/storybook)
+The Design System team is working on moving the component documentation to [Storybook](https://design.va.gov/storybook).
