Update docs related to formation-react

--- a/packages/documentation/src/pages/forms/index.mdx
+++ b/packages/documentation/src/pages/forms/index.mdx
@@ -35,4 +35,4 @@ The forms library shouldn't be used when
 - the form is simple enough to fit on a single page, or
 - when the user experience doesn't benefit from **all** of the steps documented in the above flow.
 
-In these cases, it's recommended to either make simple single page form or to deploy a React app that doesn't use the forms library. We have form components available in the formation-react library, which can view [here](/platform).
+In these cases, it's recommended to either make simple single page form or to deploy a React app that doesn't use the forms library.
