--- a/packages/documentation/src/pages/visual-design/index.mdx
+++ b/packages/documentation/src/pages/visual-design/index.mdx
@@ -14,11 +14,11 @@ The VA design system documentation can be viewed at [design.va.gov](https://desi
 
 If you need to use Formation on a project outside of the vets-website repository, you can follow the instructions here. If you're using it on an app in vets-website, it should be ready for you to use already.
 
-## Formation-react
+## Component-library
 
-Separately from the main `formation` module, we also have `formation-react`, which contains React implementations of many of the components described in the design system. This is already set up for you to use in vets-website; for uses outside of vets-website, see the module [readme](https://www.npmjs.com/package/@department-of-veterans-affairs/formation-react).
+Separately from the main `formation` module, we also have `component-library`, which contains React implementations of many of the components described in the design system. This is already set up for you to use in vets-website; for uses outside of vets-website, see the module [readme](https://www.npmjs.com/package/@department-of-veterans-affairs/component-library).
 
-You can view documentation for each of the components in `formation-react` by clicking on one in the sidebar on the left of the page.
+You can view documentation for each of the components in `component-library` by clicking on one in the sidebar on the left of the page.
 
 ### Storybook
 
