--- a/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
@@ -1,17 +1,11 @@
 ---
 title: Updating Formation and Formation React
-tags: formation, formation-react, update, release, publish, npm
+tags: formation, component-library, update, release, publish, npm
+
 ---
 
 ## Making updates to formation
 You can find a detailed guide on contributing to formation at [https://dev-design.va.gov/documentation/contributing-to-formation](https://dev-design.va.gov/documentation/contributing-to-formation)
-
-## Making updates to formation-react
-1. Components should be created and tested in vets-website first before being moved over to formation-react
-2. Transfer component to formation-react
-3. Test the formation-react version of the component in vets-website before publishing. [Check out these instructions on how to do so](/getting-started/common-tasks/previewing-changes).
-4. Write component tests
-5. [Create your react component documentation](/documentation-guide/doc-page)
 
 ## Publishing Module to NPM
 
@@ -21,7 +15,7 @@ After you've tested and previewed your changes locally it's time to publish a ne
 
 ### 1. Submit your PR
 
-Submit a PR that includes all of your code changes. This should include the bump in versions you need, which you can change directly in the `package.json` files for the modules that are changing. Modules like `formation-react` depend on `formation` via a peer dependency, so you may need to update that as well. We try to keep the peer dependency loose and only update it for breaking changes.
+Submit a PR that includes all of your code changes. This should include the bump in versions you need, which you can change directly in the `package.json` files for the modules that are changing.
 
 You'll need to choose what type of version update to make:
 
@@ -54,4 +48,4 @@ This should be set as **GITHUB_API_KEY** in your environment variable.
 
 ### 5. Update consuming apps
 
-The last step is to update the `package.json` files of consuming apps to use the latest version of `@department-of-veterans-affairs/formation` (or `formation-react`). For example, if you are working with the `vets-website` project, open the `vets-website`'s `package.json` to update the version number of the `@department-of-veterans-affairs/formation` entry listed in the `dependencies` section. The version number should match what you just published to NPM.
+The last step is to update the `package.json` files of consuming apps to use the latest version of `@department-of-veterans-affairs/formation`. For example, if you are working with the `vets-website` project, open the `vets-website`'s `package.json` to update the version number of the `@department-of-veterans-affairs/formation` entry listed in the `dependencies` section. The version number should match what you just published to NPM.
