Make text discernable to screen readers

--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -11,7 +11,9 @@ The _actual_ BTT component consists of the following - the rest is just context:
 ```html
   <div id="back-to-top-container">
     <div class="usa-content">
-      <button type="button" className="usa-button" />
+      <button type="button" className="usa-button">
+        <span>Back to top</span>
+      </button>
     </div>
   </div>
 ```
@@ -71,7 +73,9 @@ The _actual_ BTT component consists of the following - the rest is just context:
     </main>
     <div id="back-to-top-container">
         <div class="usa-content">
-          <button type="button" className="usa-button" />
+          <button type="button" className="usa-button">
+            <span>Back to top</span>
+          </button>
         </div>
     </div>
   </div>
