--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -12,6 +12,10 @@ The _actual_ BTT component consists of the following - the rest is just context:
   <div id="back-to-top-container">
     <div class="usa-content">
       <button type="button" className="usa-button">
+        <span>
+          <i aria-hidden="true" class="fas fa-arrow-up" role="img"></i>
+          <span class="vads-u-visibility--screen-reader">Back to top</span>
+        </span>
         <span>Back to top</span>
       </button>
     </div>
@@ -74,6 +78,10 @@ The _actual_ BTT component consists of the following - the rest is just context:
     <div id="back-to-top-container">
         <div class="usa-content">
           <button type="button" className="usa-button">
+            <span>
+              <i aria-hidden="true" class="fas fa-arrow-up" role="img"></i>
+              <span class="vads-u-visibility--screen-reader">Back to top</span>
+            </span>
             <span>Back to top</span>
           </button>
         </div>
