Update docs for Telephone component (#438)
* Update docs for Telephone component

* Update HELP_DESK and add HEALTHCARE_ELIGIBILITY_CENTER that was removed in merging master

* Adjust formatting

* Adjust whitespace

* One more :p

Co-authored-by: Brooks Johnson <brooks.johnson@pm.me>

--- a/packages/formation-react/src/components/Telephone/Telephone.mdx
+++ b/packages/formation-react/src/components/Telephone/Telephone.mdx
@@ -122,32 +122,33 @@ import Telephone, { CONTACTS, PATTERNS } from '@department-of-veterans-affairs/f
 
 ### Predefined contacts
 
-| Key                           | Number       | Description                                                                                                  |
-| :---------------------------- | :----------- | :----------------------------------------------------------------------------------------------------------- |
-| `222_VETS`                    | `8772228387` | VA Help Line                                                                                                 |
-| `4AID_VET`                    | `8774243838` | National Call Center for Homeless Veterans                                                                   |
-| `711`                         | `711`        | Telecommunications Relay Service                                                                             |
-| `911`                         | `911`        | Emergency!                                                                                                   |
-| `CAREGIVER`                   | `8552603274` | VA National Caregiver Support Line                                                                           |
-| `CRISIS_LINE`                 | `8002738255` | Veterans Crisis hotline                                                                                      |
-| `CRISIS_TTY`                  | `8007994889` | Veterans Crisis hotline TTY                                                                                  |
-| `DMC`                         | `8008270648` | Debt Management Center                                                                                       |
-| `DMC_OVERSEAS`                | `6127136415` | Debt Management Center (Overseas)                                                                            |
-| `DMDC_DEERS`                  | `8663632883` | Defense Manpower Data Center (DMDC) + Defense Enrollment Eligibility Reporting System (DEERS) Support Office |
-| `DS_LOGON_TTY`                | `8663632883` | Defense Manpower Data Center TTY                                                                             |
-| `DS_LOGON`                    | `8005389552` | Defense Manpower Data Center                                                                                 |
-| `FEDERAL_RELAY_SERVICE`       | `8008778339` | Federal Relay Service                                                                                        |
-| `GI_BILL`                     | `8884424551` | Education Call Center (1-888-GI-BILL-1)                                                                      |
-| `GO_DIRECT`                   | `8003331795` | Go Direct/Direct Express (Treasury)                                                                          |
-| `HELP_DESK`                   | `8555747286` | VA Help desk                                                                                                 |
-| `HELP_TTY`                    | `8008778339` | VA Help Desk TTY                                                                                             |
-| `MY_HEALTHEVET`               | `8773270022` | My HealtheVet help desk                                                                                      |
-| `NCA`                         | `8005351117` | National Cemetery Scheduling Office                                                                          |
-| `SUICIDE_PREVENTION_LIFELINE` | `8007994889` | Suicide Prevention Line                                                                                      |
-| `TESC`                        | `8882242950` | U.S. Treasury Electronic Payment Solution Center                                                             |
-| `TREASURY_DMS`                | `8888263127` | U.S. Department of the Treasury (Debt Management Services)                                                   |  |  |
-| `VA_311`                      | `8446982311` | VA Help desk (VA311)                                                                                         |
-| `VA_BENEFITS`                 | `8008271000` | Veterans Benefits Assistance                                                                                 |
+| Key                             | Number       | Description                                                                                                  |
+| :------------------------------ | :----------- | :----------------------------------------------------------------------------------------------------------- |
+| `222_VETS`                      | `8772228387` | VA Help Line                                                                                                 |
+| `4AID_VET`                      | `8774243838` | National Call Center for Homeless Veterans                                                                   |
+| `711`                           | `711`        | Telecommunications Relay Service                                                                             |
+| `911`                           | `911`        | Emergency!                                                                                                   |
+| `CAREGIVER`                     | `8552603274` | VA National Caregiver Support Line                                                                           |
+| `CRISIS_LINE`                   | `8002738255` | Veterans Crisis hotline                                                                                      |
+| `CRISIS_TTY`                    | `8007994889` | Veterans Crisis hotline TTY                                                                                  |
+| `DMC`                           | `8008270648` | Debt Management Center                                                                                       |
+| `DMC_OVERSEAS`                  | `6127136415` | Debt Management Center (Overseas)                                                                            |
+| `DMDC_DEERS`                    | `8663632883` | Defense Manpower Data Center (DMDC) + Defense Enrollment Eligibility Reporting System (DEERS) Support Office |
+| `DS_LOGON_TTY`                  | `8663632883` | Defense Manpower Data Center TTY                                                                             |
+| `DS_LOGON`                      | `8005389552` | Defense Manpower Data Center                                                                                 |
+| `FEDERAL_RELAY_SERVICE`         | `8008778339` | Federal Relay Service                                                                                        |
+| `GI_BILL`                       | `8884424551` | Education Call Center (1-888-GI-BILL-1)                                                                      |
+| `GO_DIRECT`                     | `8003331795` | Go Direct/Direct Express (Treasury)                                                                          |
+| `HELP_DESK`                     | `8446982311` | VA Help desk                                                                                                 |
+| `HEALTHCARE_ELIGIBILITY_CENTER` | `8554888440` | VA Healthcare Eligibility Center (Eligibility Division)                                                      |
+| `HELP_TTY`                      | `8008778339` | VA Help Desk TTY                                                                                             |
+| `MY_HEALTHEVET`                 | `8773270022` | My HealtheVet help desk                                                                                      |
+| `NCA`                           | `8005351117` | National Cemetery Scheduling Office                                                                          |
+| `SUICIDE_PREVENTION_LIFELINE`   | `8007994889` | Suicide Prevention Line                                                                                      |
+| `TESC`                          | `8882242950` | U.S. Treasury Electronic Payment Solution Center                                                             |
+| `TREASURY_DMS`                  | `8888263127` | U.S. Department of the Treasury (Debt Management Services)                                                   |  |  |
+| `VA_311`                        | `8446982311` | VA Help desk (VA311)                                                                                         |
+| `VA_BENEFITS`                   | `8008271000` | Veterans Benefits Assistance                                                                                 |
 
 ### Predefined patterns
 
