Another doc cleanup

--- a/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
+++ b/packages/documentation/src/pages/getting-started/common-tasks/updating-formation.mdx
@@ -1,6 +1,6 @@
 ---
-title: Updating Formation and Formation React
-tags: formation, component-library, update, release, publish, npm
+title: Updating Formation
+tags: formation, update, release, publish, npm
 
 ---
 
