--- a/packages/documentation/src/pages/forms/config-options.mdx
+++ b/packages/documentation/src/pages/forms/config-options.mdx
@@ -52,7 +52,7 @@ const formConfig = {
   //
   // Path to vets-api controller for form submission
   submitUrl: `${environment.API_URL}/v0/health_care_applications`,
-  
+
   // Function that is called upon form submission
   submit:  (form, formConfig) => {},
 
@@ -91,6 +91,15 @@ const formConfig = {
         'Your saved education benefits application (22-1995) has expired. If you want to apply for education benefits, please start a new application.',
       saved: 'Your education benefits application has been saved.',
     },
+    // *** Form restart-specific options ***
+    // Defaults to WIZARD_STATUS in 'applications/static-pages/wizard'. Added
+    // here if your form uses a unique sessionStorage key
+    restartWizardKey: 'wizardStatus',
+    // state parameter is either 'restarting' (from FormStartControls component)
+    // or 'restarted' (from RoutedSavableApp component)
+    // Return the destination route ('/' is the introduction page) or null to
+    // continue with the default behavior
+    restartFormCallback: state => '/',
   },
   prefillEnabled: false,
   downtime: {
@@ -144,7 +153,7 @@ const formConfig = {
     appType: 'order',
     appAction: 'placing your order',
   },
-  
+
   // The object that contains the configuration for each chapter.
   chapters: {
     // Each property is the key for a chapter.
