--- a/packages/documentation/src/pages/forms/save-in-progress.mdx
+++ b/packages/documentation/src/pages/forms/save-in-progress.mdx
@@ -21,9 +21,22 @@ const formConfig = {
   formId: '1010ez',
   version: 0,
   prefillEnabled: true,
+  // include this storage key only if you're form has a wizard
+  wizardStorageKey: 'wizardStatus', // sessionStorage key for the wizard
   savedFormMessages: {
     notFound: 'Please start over to apply for health care.',
     noAuth: 'Please sign in again to resume your application for health care.'
+  },
+  saveInProgress: {
+    messages: {
+      inProgress:
+        'Your ___ application (XX-XXXX) is in progress.',
+      expired:
+        'Your saved ___ application (XX-XXXX) has expired. If you want to apply for ___, please start a new application.',
+      saved: 'Your ___ application has been saved.',
+    },
+    // return restart destination url
+    restartFormCallback: () => '/', // introduction page
   },
   ...
 }
@@ -32,6 +45,8 @@ const formConfig = {
 This is from our health care application. The most important piece of information is `formId`, which is the key that will be used to save the form data on the backend. Once you choose this, you can't change it in production. We also set a version, typically to 0, which can be incremented if you need to migrate form data in production.
 
 There are also a couple of messages you can set, which show up in various places on the form (primarily on the intro page).
+
+See [form wizard](/forms/wizard) for more details on setting up the wizards and its options.
 
 ## User profile
 
