--- a/packages/documentation/src/pages/forms/config-options.mdx
+++ b/packages/documentation/src/pages/forms/config-options.mdx
@@ -52,7 +52,7 @@ const formConfig = {
   //
   // Path to vets-api controller for form submission
   submitUrl: `${environment.API_URL}/v0/health_care_applications`,
-  
+
   // Function that is called upon form submission
   submit:  (form, formConfig) => {},
 
@@ -79,6 +79,11 @@ const formConfig = {
     noAuth: errorMessages.savedFormNoAuth,
   },
 
+  // Defaults to WIZARD_STATUS in 'platform/site-wide/wizard'. Added
+  // here if your form uses a unique sessionStorage key (currently only used by
+  // the save-in-progress component)
+  wizardStorageKey: 'wizardStatus',
+
   // Legacy SiP configuration such as savedFormMessages will be moved into saveInProgress.
   // All new SiP configuration will go here.
   saveInProgress: {
@@ -91,6 +96,13 @@ const formConfig = {
         'Your saved education benefits application (22-1995) has expired. If you want to apply for education benefits, please start a new application.',
       saved: 'Your education benefits application has been saved.',
     },
+    // *** Form restart-specific options ***
+    // This callback is _only_ called by the RoutedSavableApp, so if the wizard
+    // is being rendered by the outer form App file, this callback won't work
+    // If the wizard is being rendered within the Intro page (like 0996 HLR),
+    // then have the function return a destination route ('/' is the
+    // introduction page)
+    restartFormCallback: state => '/',
   },
   prefillEnabled: false,
   downtime: {
@@ -144,7 +156,7 @@ const formConfig = {
     appType: 'order',
     appAction: 'placing your order',
   },
-  
+
   // The object that contains the configuration for each chapter.
   chapters: {
     // Each property is the key for a chapter.
