--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -39,7 +39,17 @@ From here, Jenkins can kickoff a production deployment. After the deployment occ
 
 ## Rollbacks
 
-If a production deployment introduces issues that affect Service Level Objectives (SLOs) established for the project, the DevOps team may restore service to users by rolling back the deployment. This is accomplished by triggering a new deploy job in Jenkins using a previous release tag.
+If a production deployment introduces issues that affect Service Level Objectives (SLOs) 
+established for the project, you may restore service to users by rolling back 
+to a previous deployment. This is accomplished by triggering a new deploy job in Jenkins using a 
+previous release tag.
+
+1. Identify the release you want to rollback to by visiting the [vets-website release log](https://github.com/department-of-veterans-affairs/vets-website/releases)
+2. Click on the commit ID in the left column of the release you want to reference
+3. Copy the commit ref (it will be a long string like: `7c74702605561a33a5a6edbe46a95ac43dddb1df`)
+4. Visit the [vets-website prod deploy job](http://jenkins.vfs.va.gov/job/deploys/job/vets-website-vagovdev/build?delay=0sec)
+5. Enter the ref value into the ref field
+6. Click "Build"
 
 The **use of hotfixes is discouraged**, but may be useful in an emergency situation when `master` has significantly deviated from the release and a fix to the failed production release is critical. To create a hotfix, create a branch from the last stable release tag, make changes necessary (with review), create a new release tag following the correct naming scheme, and trigger a deploy in Jenkins with the release name as a parameter.
 
