update slack channel name (#596)

--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -103,7 +103,7 @@ first, with the latter queued up behind it.
    - Click **Build**
    - Verify commits in **deployment notification**
 
- _In Slack channel **#vetsgov-engineers**, Jenkins will include a link that shows the exact commits being released in the **deploy notification**._
+ _In the [#vfs-engineers](https://dsva.slack.com/archives/C0MQ281DJ) Slack channel, Jenkins will include a link that shows the exact commits being released in the **deploy notification**._
 
 2. **Verify** changes in **production** once the build finishes
 
@@ -123,8 +123,8 @@ _You may need to contact the developers of those commits to verify._
    - Click **Build**
    - Verify commits in **deployment notification**
 
- _In Slack channel **#vetsgov-engineers**, Jenkins will include a link that shows the exact commits being released in the **deploy notification**._
-
+ _In the [#vfs-engineers](https://dsva.slack.com/archives/C0MQ281DJ) Slack channel, Jenkins will include a link that shows the exact commits being released in the **deploy notification**._
+ 
 2. **Verify** changes in **production** once the build finishes
 
 
