Add `selectedProps` documentation

--- a/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
@@ -146,6 +146,13 @@ const formConfig = {
             widgetProps: {
               Y: { 'aria-describedby': 'some_id' },
               N: { 'aria-describedby': 'different_id' },
+            },
+            // Only added to the radio when it is selected
+            // a11y requirement: aria-describedby ID's *must* exist on the page;
+            // and we conditionally add content based on the selection
+            selectedProps: {
+              Y: { 'aria-describedby': 'some_id' },
+              N: { 'aria-describedby': 'different_id' },
             }
           }
         },
