--- a/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-basic.mdx
@@ -199,8 +199,15 @@ page1: {
       'ui:widget': 'radio',
       'ui:options': {
         widgetProps: {
+          'First option': { 'data-info': 'first_1' },
+          'Second option': { 'data-info': 'second_2' }
+        },
+        // Only added to the radio when it is selected
+        // a11y requirement: aria-describedby ID's *must* exist on the page;
+        // and we conditionally add content based on the selection
+        selectedProps:  {
           'First option': { 'aria-describedby': 'some_id_1' },
-          'Second option': { 'aria-describedby': 'some_id_2' },
+          'Second option': { 'aria-describedby': 'some_id_2' }
         }
       }
     }
