--- a/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
@@ -169,7 +169,14 @@ page1: {
         },
         widgetProps: {
           Y: { 'aria-describedby': 'some_id' },
-          N: { 'aria-describedby': 'different_id' },
+          N: { 'aria-describedby': 'different_id' }
+        },
+        // Only added to the radio when it is selected
+        // a11y requirement: aria-describedby ID's *must* exist on the page;
+        // and we conditionally add content based on the selection
+        selectedProps: {
+          Y: { 'aria-describedby': 'some_id' },
+          N: { 'aria-describedby': 'different_id' }
         }
       }
     },
@@ -215,7 +222,14 @@ page1: {
         },
         widgetProps: {
           Y: { 'aria-describedby': 'some_id' },
-          N: { 'aria-describedby': 'different_id' },
+          N: { 'aria-describedby': 'different_id' }
+        },
+        // Only added to the radio when it is selected
+        // a11y requirement: aria-describedby ID's *must* exist on the page;
+        // and we conditionally add content based on the selection
+        selectedProps: {
+          Y: { 'aria-describedby': 'some_id' },
+          N: { 'aria-describedby': 'different_id' }
         }
       }
     },
@@ -262,7 +276,14 @@ page1: {
         },
         widgetProps: {
           Y: { 'aria-describedby': 'some_id' },
-          N: { 'aria-describedby': 'different_id' },
+          N: { 'aria-describedby': 'different_id' }
+        },
+        // Only added to the radio when it is selected
+        // a11y requirement: aria-describedby ID's *must* exist on the page;
+        // and we conditionally add content based on the selection
+        selectedProps: {
+          Y: { 'aria-describedby': 'some_id' },
+          N: { 'aria-describedby': 'different_id' }
         }
       }
     }
