link to Platform deployment policy

--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -79,6 +79,8 @@ release name as a parameter. This documentation is above, in the "Creating a Rel
 
 ## Manual deployment
 
+Out-of-band deploys may be performed in accordance with Platform [deployment policy](https://github.com/department-of-veterans-affairs/va.gov-team/blob/master/platform/working-with-vsp/policies-work-norms/deployment-policy.md#requesting-out-of-band-deploys).
+
 Two out-of-cycle deploys are supported in Jenkins:
 - partial deploy including only static page changes (`vagov-content` and `Drupal`)
 - full deploy of VA.gov client app and static pages
