--- a/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
@@ -275,8 +275,8 @@ page1: {
           N: 'No, I do not want this',
         },
         widgetProps: {
-          Y: { 'aria-describedby': 'some_id' },
-          N: { 'aria-describedby': 'different_id' }
+          Y: { 'data-info': 'yes' },
+          N: { 'data-info': 'no' }
         },
         // Only added to the radio when it is selected
         // a11y requirement: aria-describedby ID's *must* exist on the page;
