Add `selectedProps` documentation (#604)
* Add `selectedProps` documentation

* Change widgetProp examples

* More fixes

--- a/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-advanced.mdx
@@ -144,6 +144,13 @@ const formConfig = {
               N: 'No, I do not want this',
             },
             widgetProps: {
+              Y: { 'data-info': 'yes' },
+              N: { 'data-info': 'no' },
+            },
+            // Only added to the radio when it is selected
+            // a11y requirement: aria-describedby ID's *must* exist on the page;
+            // and we conditionally add content based on the selection
+            selectedProps: {
               Y: { 'aria-describedby': 'some_id' },
               N: { 'aria-describedby': 'different_id' },
             }
