--- a/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
+++ b/packages/documentation/src/pages/forms/available-features-and-usage-guidelines.mdx
@@ -188,6 +188,15 @@ uiSchema: {
       sloth: 'Sloth'
     },
     widgetProps: {
+      dog: { 'data-info': 'dog_1' },
+      cat: { 'data-info': 'cat_2' },
+      octopus: { 'data-info': 'octopus_3' },
+      sloth: { 'data-info': 'sloth_4' },
+    },
+    // Only added to the radio when it is selected
+    // a11y requirement: aria-describedby ID's *must* exist on the page; and we
+    // conditionally add content based on the selection
+    selectedProps: {
       dog: { 'aria-describedby': 'some_id_1' },
       cat: { 'aria-describedby': 'some_id_2' },
       octopus: { 'aria-describedby': 'some_id_3' },
@@ -358,6 +367,13 @@ Your config file might look like this:
       'ui:widget': 'yesNo',
       'ui:options': {
         widgetProps: {
+          Y: { 'data-info': 'yes' },
+          N: { 'data-info': 'no' },
+        },
+        // Only added to the radio when it is selected
+        // a11y requirement: aria-describedby ID's *must* exist on the page; and
+        // we conditionally add content based on the selection
+        selectedProps: {
           Y: { 'aria-describedby': 'some_id' },
           N: { 'aria-describedby': 'different_id' },
         }
