--- a/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
@@ -168,8 +168,15 @@ page1: {
           N: 'No, I do not want this',
         },
         widgetProps: {
+          Y: { 'data-info': 'yes' },
+          N: { 'data-info': 'no' }
+        },
+        // Only added to the radio when it is selected
+        // a11y requirement: aria-describedby ID's *must* exist on the page;
+        // and we conditionally add content based on the selection
+        selectedProps: {
           Y: { 'aria-describedby': 'some_id' },
-          N: { 'aria-describedby': 'different_id' },
+          N: { 'aria-describedby': 'different_id' }
         }
       }
     },
@@ -214,8 +221,15 @@ page1: {
           N: 'No, I do not want this',
         },
         widgetProps: {
+          Y: { 'data-info': 'yes' },
+          N: { 'data-info': 'no' }
+        },
+        // Only added to the radio when it is selected
+        // a11y requirement: aria-describedby ID's *must* exist on the page;
+        // and we conditionally add content based on the selection
+        selectedProps: {
           Y: { 'aria-describedby': 'some_id' },
-          N: { 'aria-describedby': 'different_id' },
+          N: { 'aria-describedby': 'different_id' }
         }
       }
     },
@@ -261,8 +275,15 @@ page1: {
           N: 'No, I do not want this',
         },
         widgetProps: {
+          Y: { 'data-info': 'yes' },
+          N: { 'data-info': 'no' }
+        },
+        // Only added to the radio when it is selected
+        // a11y requirement: aria-describedby ID's *must* exist on the page;
+        // and we conditionally add content based on the selection
+        selectedProps: {
           Y: { 'aria-describedby': 'some_id' },
-          N: { 'aria-describedby': 'different_id' },
+          N: { 'aria-describedby': 'different_id' }
         }
       }
     }
