--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -42,7 +42,7 @@ _A big assumption in this process is that the `master` should always be deployab
 
 ## Automated process details
 
-- Every work day at the configured time the [vets-gov-autodeploy-vets-website](http://jenkins.vfs.va.gov/job/deploys/job/vets-gov-autodeploy-vets-website/) release job](http://jenkins.vfs.va.gov/job/releases/job/vets-website/) job will run.
+- Every work day at the configured time the [vets-gov-autodeploy-vets-website](http://jenkins.vfs.va.gov/job/deploys/job/vets-gov-autodeploy-vets-website/) job will run.
 - The autodeploy job will call the [vets-website release](http://jenkins.vfs.va.gov/job/releases/job/vets-website/) job which creates a [release](https://github.com/department-of-veterans-affairs/vets-website/releases).
 - Release artifact is deployed to production by [vets-website-vagovprod job](http://jenkins.vfs.va.gov/job/deploys/job/vets-website-vagovprod/). This job should *not* be triggered manually.
 
