--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -24,10 +24,11 @@ Code goes through several steps to get to production. This document describes th
 
 ## Automated deployment schedule
 
-| Application | Branch | Changes in by | Deployment Start | Release History |
+| Application | Branch | Changes in by | Deployment Start | Release Information |
 | --- | --- | --- | --- | --- |
-| vets-website | master | 2:00pm ET M-F | 3:00pm ET M-F| https://github.com/department-of-veterans-affairs/vets-website/releases |
-| vets-api | master | 2:00pm ET M-F | 3:00pm ET M-F | https://github.com/department-of-veterans-affairs/vets-api/releases |
+| vets-website | master | 2:00pm ET M-F | 3:00pm ET M-F| [vets-website release history](https://github.com/department-of-veterans-affairs/vets-website/releases) |
+| vets-api | master | 2:00pm ET M-F | 3:00pm ET M-F | [vets-api release history](https://github.com/department-of-veterans-affairs/vets-api/releases) |
+| vets-webiste (content only) | master | 9am-12pm Hourly, 1:45pm, 4pm, 5pm ET M-F | (same) | [vets-website latest release](https://github.com/department-of-veterans-affairs/vets-website/releases/latest) |
 
 ## Overview
 
