Add note to release documentation

--- a/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
+++ b/packages/documentation/src/pages/getting-started/workflow/deploy.mdx
@@ -84,6 +84,7 @@ If the commit you are trying to release to does not have an official release tag
 8. You should now see it in the [vets-website release log](https://github.com/department-of-veterans-affairs/vets-website/releases) and can follow the normal rollback steps.
 
 This should create a new release, and deploy it to va.gov.
+**Note:** Verify that there are no scheduled content releases around the time of creating a release. A following release can override your manual release if started before your release has finished.
 
 ## Hotfixes
 
